--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  max-width: 1000px;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -15,7 +17,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  max-height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
