编写时间选择器

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   max-width: 1000px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .App-logo {
@@ -38,4 +37,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.pointer {
+  cursor: pointer;
 }
