--- a/src/App.css
+++ b/src/App.css
@@ -4,28 +4,17 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* @media (prefers-reduced-motion: no-preference) {
+ 
+} */
 
-.App-header {
-  background-color: #282c34;
-  /* min-height: 100vh; */
-  max-height: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
 }
-
 .App-link {
   color: #61dafb;
 }
@@ -41,4 +30,11 @@
 
 .pointer {
   cursor: pointer;
+}
+.cfff {
+  color: #ffffff;
+}
+
+.header-box {
+  background-color: #282c34;
 }
