--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  max-width: 1000px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
@@ -37,4 +37,5 @@
 
 .header-box {
   background-color: #282c34;
+  padding-bottom: 50px;
 }
